[package]
name = "lumio-api"
description = "Lumio REST API"
version = "0.2.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
lumio-api-types = { workspace = true }
lumio-bcs-utils = { workspace = true }
lumio-build-info = { workspace = true }
lumio-config = { workspace = true }
lumio-crypto = { workspace = true }
lumio-gas-schedule = { workspace = true }
lumio-global-constants = { workspace = true }
lumio-logger = { workspace = true }
lumio-mempool = { workspace = true }
lumio-metrics-core = { workspace = true }
lumio-runtimes = { workspace = true }
lumio-sdk = { workspace = true }
lumio-storage-interface = { workspace = true }
lumio-types = { workspace = true }
lumio-vm = { workspace = true }
bcs = { workspace = true }
bytes = { workspace = true }
fail = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
mime = { workspace = true }
mini-moka = { workspace = true }
move-core-types = { workspace = true }
num_cpus = { workspace = true }
once_cell = { workspace = true }
paste = { workspace = true }
poem = { workspace = true }
poem-openapi = { workspace = true }
regex = { workspace = true }
rstest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
lumio-api-test-context = { workspace = true }
lumio-cached-packages = { workspace = true }
lumio-framework = { workspace = true }
lumio-gas-meter = { workspace = true }
lumio-gas-schedule = { workspace = true, features = ["testing"] }
lumio-move-stdlib = { workspace = true }
lumio-proptest-helpers = { workspace = true }
lumio-transaction-filters = { workspace = true, features = ["fuzzing"] }
move-package = { workspace = true }
passkey-types = { workspace = true }
percent-encoding = { workspace = true }
proptest = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
warp = { workspace = true }

[features]
failpoints = ["fail/failpoints"]

[package.metadata.cargo-machete]
ignored = ["mime"]
